<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image"
            android:contentDescription="@string/image_start_view"
            android:scaleType="centerCrop"
            android:src="@drawable/start_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_messages"
            android:layout_marginLeft="@dimen/margin_left_messages"
            android:layout_marginRight="@dimen/margin_right_messages"
            android:layout_marginTop="@dimen/margin_top_messages"
            android:text="@string/description"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/text_size_messages" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="@dimen/button_start_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/button_start_margin_bottom"
            android:layout_marginTop="@dimen/button_start_margin_top"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/button_start"
            android:onClick="startQuiz"
            android:text="@string/start_button"
            android:textColor="@color/button_start_textColor"
            android:textSize="@dimen/button_start_textSize" />

    </LinearLayout>

</ScrollView>