<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/background_question"
            android:padding="@dimen/padding_question"
            android:text="@string/question_4"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/title_size"
            android:fontFamily="@font/robotolight" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_options"
                android:text="@string/q4_option_1"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/body_1_size"
                android:fontFamily="@font/robotolight"/>

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_options"
                android:text="@string/q4_option_2"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/body_1_size"
                android:fontFamily="@font/robotolight"/>

            <RadioButton
                android:id="@+id/radio_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_options"
                android:text="@string/q4_option_3"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/body_1_size"
                android:fontFamily="@font/robotolight"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_next_question"
            android:layout_width="@dimen/width_button"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_button"
            android:background="@color/colorPrimaryDark"
            android:onClick="nextQuestion"
            android:text="@string/button_next_question"
            android:textColor="@color/text_button" />

    </LinearLayout>

</ScrollView>